--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "email": "me@phuoc.ng",
         "url": "https://twitter.com/nghuuphuoc"
     },
-    "homepage": "https://1loc.dev",
+    "homepage": "https://code-oneliners.vercel.app",
     "keywords": [
         "JavaScript",
         "utility"
